nametag spacing fixed

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -5,7 +5,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 1.2em;
-    width: device-width;
 }
 nav{
   font-family: 'Amatic SC', cursive;
@@ -44,36 +43,29 @@ h2{
   height: 8.0em;
   border-radius: 50%;
   background: #C4C4C4;
+  margin-right: 5%;
 }
 #name{
   font-family: 'Amatic SC', cursive;
   font-style: normal;
   font-weight: bold;
-  font-size: 5.0em;
-  border: 3px dotted #000000;
+  font-size: 4.0em;
 }
 #frontpage{
-  display: flex;
-  position: relative;
-  flex-direction: row;
-  align-items: center;
-  vertical-align: center;
-  margin: auto;
   height: 100vh;
   width: 90vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 #intro{
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  vertical-align: center;
-  border: 3px dotted #000000;
+  width: 60%;
+  vertical-align: top;
+  line-height: 0.1em;
 }
 #intro p{
-  width: auto;
-  padding-bottom: 0.5em;
-  border: 3px dotted #000000;
+  line-height: 1.0em;
 }
 #experience-block *{
   position: relative;
@@ -100,6 +92,7 @@ h2{
 #descr-block{
   width: 95%;
   height: auto;
+  margin-bottom: 5%;
 }
 #descr-block *{
   position: relative;
@@ -120,7 +113,7 @@ h2{
   width: 93vw;
 }
 #skills{
-  height: 100vh;
+  height: 90vh;
   width: 93vw;
 }
 footer{
